tests/fixtures/invalid/pow_list_int_list.py
# Cannot call pow() with List[int], Int, List[int]
x = pow([1, 2, 3], 1, [1, 2, 3])
